feat: 동기화 뷰모델 네트워크 부분 수정
싱글톤 패턴에서 뷰모델로 가져옴
파일 분리 필요

--- a/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
+++ b/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
@@ -169,11 +169,7 @@
                             <barButtonItem systemItem="trash" id="OzD-0D-AZ1">
                                 <color key="tintColor" systemColor="systemRedColor"/>
                             </barButtonItem>
-                            <barButtonItem image="arrow.clockwise.icloud" catalog="system" id="ewt-cb-9N8">
-                                <connections>
-                                    <action selector="syncAction:" destination="BYZ-38-t0r" id="0Rl-zz-qSX"/>
-                                </connections>
-                            </barButtonItem>
+                            <barButtonItem image="arrow.clockwise.icloud" catalog="system" id="ewt-cb-9N8"/>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
